@@ -5,21 +5,25 @@ import javafx.scene.Scene;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 
-public class Calculadora extends Application  {
+public class Calculadora extends Application {
 	
-	public static void main(String args[]){ 
-	      ***(args); 
-	} 
+	/**
+	--module-path 'C:\JavaFX\lib'
+	--add-modules javafx.controls,javafx.fxml
+	**/
 	
-	@Override
-	public void start(Stage window) throws Exception {
-		*** vb = new VBox();
-		window.setTitle(***);
-		
-		vb.getChildren().add(new Calculator());
-		Scene sc = new Scene(***, 270, 270);
-		window.setScene(***);
-		***.show();
-	}
-	
+    public static void main(String args[]) {
+        launch(args);
+    }
+
+    @Override
+    public void start(Stage window) throws Exception {
+        VBox vb = new VBox();
+        window.setTitle("Calculator");
+
+        vb.getChildren().add(new Calculator());
+        Scene sc = new Scene(vb, 270, 270);
+        window.setScene(sc);
+        window.show();
+    }
 }
